[metadata]
name = timecube
version = 1.1.0
author = Fullstack Software Innovations
author_email = chris@fullstack.software
description = When you need to fill up space with something more interesting than Lorem Ipsum
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/FullstackSoftwareInnovations/timecube-py/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src